fixes(adaptive): nav panel (out of bounds) last picture in gallery(under pagination)

--- a/css/pages/catalog-page-layout.css
+++ b/css/pages/catalog-page-layout.css
@@ -117,23 +117,25 @@ html, body {
 }
 
 .nav-line {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    gap: 24px;
     padding: 35px 44px 16px; /* 16 + 28, because of negative margin */
-    height: 91px;
+    min-height: 91px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     background-color: #FFFFFF;
 }
 
 .nav-line__store-logo {
-    float: left;
+    display: flex;
     margin-top: -2px; /* fit img text to navigation bar text */
-    margin-right: 24px;
     width: 184px;
     height: 40px;
 }
 
 .nav-line__store-bag {
-    float: left;
     width: 35px;
     height: 39px;
     margin-right: 5px;
@@ -145,9 +147,8 @@ html, body {
 }
 
 .nav-line__navigation-bar {
-    margin-right: 41px;
-    float: left;
     display: flex;
+    height: fit-content;
     gap: 8px;
 }
 
@@ -161,7 +162,9 @@ html, body {
 
 
 .nav-line__search-panel {
-    float: right;
+    margin-left: auto; /*!!! make element float right inside flex*/
+    display: flex;
+    height: fit-content;
     padding: 8px 12px;
     border-radius: 8px;
     background-color: #F4F7FA;
@@ -185,13 +188,13 @@ html, body {
 
 .nav-line__search-input {
     display: inline-block;
+    width: 180px;
     background-color: transparent;
     border: none;
-    width: 200px;
 }
 
 .nav-line__search-input:focus {
-    width: 250px;
+    width: 232px;
     transition: width 0.5s;
     outline: none;
 }
